--- a/opensocial-client/package.json
+++ b/opensocial-client/package.json
@@ -8,11 +8,16 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "config": {
+    "request_url": "http://127.0.0.1:8000"
+  },
   "dependencies": {
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
+    "sass": "^1.54.0",
     "vite": "^3.0.0"
   }
 }
