ворк: страница входа

--- a/opensocial-client/package.json
+++ b/opensocial-client/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "config": {
-    "request_url": "http://127.0.0.1:8000"
+    "request_url": "http://127.0.0.1:8000",
+    "socialname": "OpenSocial"
   },
   "dependencies": {
     "vue": "^3.2.37",
