--- a/opensocial-client/package.json
+++ b/opensocial-client/package.json
@@ -13,6 +13,7 @@
     "socialname": "OpenSocial"
   },
   "dependencies": {
+    "dayjs": "^1.11.4",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
   },
